# jpeg-archiver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.cpp  config.h  jpeg-archiver.qrc  maindialog.cpp  maindialog.h  maindialog.ui  processcontrollerthread.cpp  processcontrollerthread.h
jpeg-archiver-cli/: CMakeLists.txt  main.c
jpeg-archiver-cli/getopt/: CMakeLists.txt
jpeg-archiver-gui/: CMakeLists.txt  config.cpp  config.h  jpeg-archiver.qrc  main.cpp  maindialog.cpp  maindialog.h  maindialog.ui  processcontrollerthread.cpp  processcontrollerthread.h  processlogmodel.cpp  processlogmodel.h  task.cpp  task.h
jpeg-recompress/: CMakeLists.txt  FindJpegTurbo.cmake  image_compare.c  image_compare.cpp  image_compare.h  jpeg-recompress.c  jpeg-recompress.cpp  jpeg-recompress.h  jpeglib_cpp.h  ssim.c  ssim.h
jpeg-recompress/iqa/: CMakeLists.txt
jpeg-recompress/iqa/include/: iqa.h  math_utils.h
jpeg-recompress/iqa/source/: ssim.c
